Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-2438

QFontComboBox emits the currentFontChanged() signal twice

    XMLWordPrintable

Details

    • 2d63f8fe5b77747014e1c5807c9d457611bd9304

    Description

      The output result should be 1 and font combo should have "Sans Serif" selected. Instead, output is 2 and font combo has some other font selected.

      Code to reproduce:

      //------------------------------------------------------------------------------------
      #include <QtGui>
      #include <QtTest>

      int main( int argc, char * argv[] )
      {
      QApplication app( argc, argv );
      QFontComboBox cb;

      QSignalSpy spy( & cb, SIGNAL( currentFontChanged( const QFont & ) ) );

      QFont f( "Sans Serif" );
      cb.setCurrentFont(f);

      qDebug() << spy.count();

      cb.show();
      return app.exec();
      }
      //------------------------------------------------------------------------------------

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            goffart Olivier Goffart (closed Nokia identity) (Inactive)
            admin Administrator
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes