Fixed:  QFontComboBox emits the currentFontChanged() signal twice

Task-number: QTBUG-2438
Reviewed-by: Thierry